--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,421 +8,23 @@
     src: url('../fonts/Roboto-Bold.ttf'); 
   }
 
-  body {
-    margin-top: 0;
-    background-image: url('../img/designer_1.png');
-    background-position: top right; 
-    background-repeat: no-repeat; 
-    background-attachment: fixed; 
-    background-size: contain;
-   }
-
-  .wrapper {
-    width: 1440px;
-    margin: 0 auto;
-   }
-
-.header_container {
+  .header_container {
     display: flex;
-    width: 1440px;
-    height: 60px;
-    margin: 0;
-}
+  }
 
-.list_container {
-    display: flex;
-    gap: 60px;
-    width: 245px;
-    height: 24px;
-    margin-top: 18px;
-    margin-left: 165px;
-}
-
-.header_list_item {
-    font-size: 14px;
-    line-height: 24px;
-    font-weight: 400;
-    font-family: 'Roboto_regular';
-    color: #505F98;
-}
-
-.header_logo {
-    margin-top: 12px;
-    margin-left: 271px;
-    font-size: 26px;
-    line-height: 38px;
-    font-weight: 900;
-    font-family: 'Roboto_regular';
-    width: 95px;
-    height: 38px;
-    color: #37447E;
-}
-
-.header_link_button {
-    width: 160px;
-    height: 26px;
-    margin-top: 18px;
-    margin-left: 355px;
-    padding: 4px 0 0 4px;
-    
-
-}
+ .nav-item a  { 
+    color: black   !important;
+    text-decoration: none;
+  }
 
 .link_button {
-    background-color: #111B47;
-    color: white;
-    border-radius: 2px;
-    font-family: 'Roboto_regular';
-    text-align: center;
-    padding: 4px 0; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-a {
-    text-decoration: none;
-    color: white;
-}
-
-.introduce_container {
-    display: flex;
-    flex-direction: column;
-    margin-top: 344px;
-    margin-left: 164px;
-    width: 540px;
-    min-height: 422px;
-}
-
-.introduce_text {
-    margin-top: 20px;
-    width: 539px;
-    height: 164px;
-    font-family: 'Roboto';
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 30px;
-    text-align: left;
-    color: #505F98;
-
-}
-
-.introduce_link_buttons {
-    display: flex;
-    gap: 30px;
-    margin-top: 70px;
-}
-
-.intrhduce_text_title {
-    font-family: 'Roboro_bold';
-    font-size: 50px;
-    font-weight: 500;
-    color: #091133;
-    letter-spacing: 1px;
-    width: 540px;
-    height: 132px;
-}
-
-.introduce_link_buttons .link_button{
-    width: 190px;
-    height: 36px;
-    padding: 5px 0 5px 0;
-    line-height: 26px;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 500;
-    font-family: 'Roboto_regular';
-}
-
-.another_section_container {
-    display: flex;
-    margin-top: 546px;
-    width: 1440px;
-    gap: 30px;
-    margin-left: 166px;
-    height: 742px;
-}
-
-.another_section_left_container {
-    display: flex;
-    flex-direction: column;
-    gap: 80px;
-    width: 540px;
-    }
-
-.another_section_left_text_container {
-    display: flex;
-    flex-direction: column;
-    
-
-}
-
-.another_section_left_bottom__container {
-    display: flex;
-    gap: 30px;
-}
-
-.another_section_left_bottom___element_container {
-    display: flex;
-    flex-direction: column;
-    width: 256px;
-    height: 138px;
-}
-
-.another_section_left_bottom__text--title {
-    margin-top: 14px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 26px;
-    font-family: 'Roboto_bold';
-    color: #091133;
-}
-
-.another_section_left_bottom__text--body {
-    margin-top: 6px;
-    font-family: 'Roboto_regular';
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 18px;
-    text-align: left;
-    color: #6F7CB2;
-}
-
-.another_another_section_right {
-    width: 540px;
-}
-
-.another_section_left_text--title {
-    font-family: 'Roboto_bold';
-    font-size: 36px;
-    font-weight: 500;
-    line-height: 48px;
-    text-align: left;
-    color: #091133;
-}
-
-.another_section_left_text--body{
-    font-family: 'Roboto_regular';
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
-    text-align: left;
-    color: #6F7CB2;
-}
-
-.main_section_container {
-    display: flex;
-    width: 1440px;
-    height: 570px;
-}
-
-.main_section_right_part_container {
-    display: flex;
-    flex-direction: column;
-    width: 446px;
-    height: 228px;
-    margin-left: 156px;
-    margin-top: 172px;
-}
-
-.main_section_left_part {
-    width: 540px;
-    margin-left: 192px;
-    margin-top: 122px;
-}
-
-.main_section_right_part__text--title {
-    font-family: 'Roboto_bold';
-    font-size: 36px;
-    font-weight: 500;
-    line-height: 48px;
-    text-align: left;
-    width: 446px;
-    height: 48px;
-    color: #091133;
-}
-
-.main_section_right_part__text--body {
-    width: 445px;
-    height: 166px;
-    top: 64px;
-    font-family: 'Roboto_regular';
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
-    text-align: left;
-    color: #6F7CB2
-}
-
-.main_section_right_part__text--body .link_button {
-    width: 150px;
-    height: 32px;
-}
-
-.above_footer--container {
-    display: flex;
-    flex-direction: column;
-    width: 600px;
-    justify-content: center;
-    align-content: center;
-    margin-left: 420px;
-    
-}
-
-.above_footer__text--title {
-    font-family: 'Roboto_bold';
-    font-size: 36px;
-    font-weight: 500;
-    line-height: 48px;
-    text-align: center;
-    color: #091133;
-    width: 600px;
-    height: 48px;
-}
-
-.above_footer__text--body {
-    font-family: 'Roboto_regular';
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
-    text-align: center;
-    color: #6F7CB2;
-    margin-top: 16px;
-    width: 600px;
-    height: 78px;
-}
-
-.above_footer__text--price {
-    width: 350px;
-    height: 66px;
-    font-family: 'Roboto_regular';
-    font-size: 50px;
-    font-weight: 500;
-    line-height: 66px;
-    letter-spacing: 1px;
-    text-align: center;
-    color: #222F65;
-    margin-top: 36px;
-    margin-left: 126px;
-}
-
-.above_footer__text--above_button {
-    color: #5D6970;
-    font-family: 'Roboto_regular';
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: center;
-}
-
-.above_footer--container .link_button {
-    width: 190px;
-    height: 32px;
-    margin-left: 210px;
-}
-
-.above_footer--container .link_button {
-    margin-top: 10px;
-}
-
-.footer_container {
-    display: flex;
-    flex-direction: column;
-    width: 1440px;
-    background-color: #E7ECFF;
-    height: 216px;
-    /* margin-top: 174px; */
-    justify-content: space-between;
-}
-
-.footer_top_section--container {
-    display: flex;
-    width: 1100px;
-    border-bottom: 1px solid #CDD1D4;
-    /* justify-content: space-between; */
-    margin-left: 165px;
-    /* align-content: center; */
-    height: 140px;
-    margin-top: 68px;
-}
-
-.footer_bottom_section--container {
-    display: flex;
-    width: 1100px;
-    justify-content: space-between;
-    /* margin-left: 165px; */
-    height: 76px;
-}
-
-
-.footer_top_section--container .header_logo {
-    margin-top: 62px;
-    margin-left: 350px;
-}
-
-
-
-
-.footer_top_section--container .link_button {
-    margin-left: 408px;
-    width: 160px;
-    height: 26px;
-    margin-top: 68px;
-}
-
-.footer_top_section--year {
-    width: 180px;
-    height: 24px;
-    font-family: 'Roboto_regular';
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 24px;
-    text-align: left;
-    color: #939EA4;
-    margin-top: 68px;
-}
-
-.footer_top_section--container .link_button a {
   
-
-font-size: 12px;
-font-weight: 500;
-line-height: 18px;
-text-align: center;
 }
 
-.footer_bottom_section--social_media_icons--container {
-    display: flex;
-    /* justify-content: space-between; */
-    gap: 30px;
-    margin-top: 24px;
-    margin-left: 658px;
-}
-
-.header_list_item a {
-    color: #505F98;
-}
-
-.white_button {
-    background-color: white;
-   border: #091133 solid 2px;
-   border-radius: 2px;
-}
-
-.white_button a {
-    color: #091133;
+.link_button a {
+    font-size: 0.75rem;
     font-family: 'Roboto_regular';
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 26px;
-    text-align: center;
-}
-
-.bottom_container {
-    width: 1440px;
-    height: 586px;
-    display: flex;
-    background-image: url('../img/rectangle_background.png');
-    background-repeat: no-repeat;
-    flex-direction: column;
+    padding: 4px 60px;
+    background-color: #111B47;
+    color: white !important;
 }
